Follow-up for bug#12773 - improved subject field alignment.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
@@ -241,7 +241,7 @@ fieldset select {
 
 .TicketCompose fieldset #Subject {
     width: 50%;
-    max-width: 614px;
+    max-width: 620px;
 }
 
 fieldset.Columns .Column {
